fixed the stupid alignmnet

--- a/style.css
+++ b/style.css
@@ -1,56 +1,54 @@
-body {
-    margin: 0;
-    padding: 0;
-    font-family: "JetBrains Mono", monospace;
-}
-
 #content-container {
-    position: relative;
+    display: flex;
     height: 100vh;
     overflow-y: auto;
 }
+.explain {
+    font-family: "JetBrains Mono", monospace;
+    display: block;
+    padding: 1px 3px;
+    animation: fadeIn;
+    animation-duration: 1500ms;
+    align-content: center;
+}
 
 .explain {
-    position: fixed;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 1px 3px;
-    background-color: rgba(155, 155, 155, 0.3);
-    backdrop-filter: blur(5px);
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
-    z-index: 500;
-    animation-name: fadeIn;
-    animation-duration: 350ms;
+    display: block;
+
 }
 
 .explain h1 {
-    color: white;
+    display: block;
+    color: black;
+    text-shadow: #020302 1px 0 15px;
     font-size: 2.5em;
+    text-align: center;
+    background-color: rgba(155, 155, 155, 0.3);
+    backdrop-filter: blur(1px);
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+    padding:30px;
+    border-radius: 10px;
+    background-size: clamp(1px, 1px, 1px);
 }
 
-@keyframes fadeIn {
-    from {
-        transform: translatey(0);
-        opacity: 0;
-    }
-    to {
-        transform:translatey(100);
-        opacity: 1;
-    }
+.main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
-@keyframes dark {
+@keyframes fadeIn {
     from {
         opacity: 0;
         feGaussianBlur:100%;
-    }
-    to {
-        opacity: 0.7;
-        feGaussianBlur: 50%;
+        position: 1000px 1000px;
+        transform:translatey(0);
     }
     to {
         opacity: 1;
-        feGaussianBlur: 0
+        feGaussianBlur: 100%;
+        positiony: 100px 100px;
+        transform: translatey(100);
     }
 }
 
